zerocopy-derive/tests/ui-nightly/struct.stderr
error: unsupported on generic structs that are not repr(transparent) or repr(packed)
  --> tests/ui-nightly/struct.rs:40:10
   |
40 | #[derive(AsBytes)]
   |          ^^^^^^^
   |
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-nightly/struct.rs:56:11
   |
56 | #[repr(C, align(2))]
   |           ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-nightly/struct.rs:60:21
   |
60 | #[repr(transparent, align(2))]
   |                     ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-nightly/struct.rs:66:16
   |
66 | #[repr(packed, align(2))]
   |                ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-nightly/struct.rs:70:18
   |
70 | #[repr(align(1), align(2))]
   |                  ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
  --> tests/ui-nightly/struct.rs:74:8
   |
74 | #[repr(align(2), align(4))]
   |        ^^^^^^^^

error[E0692]: transparent struct cannot have other repr hints
  --> tests/ui-nightly/struct.rs:60:8
   |
60 | #[repr(transparent, align(2))]
   |        ^^^^^^^^^^^  ^^^^^^^^

error[E0277]: the trait bound `HasPadding<AsBytes2, true>: ShouldBe<false>` is not satisfied
  --> tests/ui-nightly/struct.rs:44:10
   |
44 | #[derive(AsBytes)]
   |          ^^^^^^^ the trait `ShouldBe<false>` is not implemented for `HasPadding<AsBytes2, true>`
   |
   = help: the trait `ShouldBe<true>` is implemented for `HasPadding<AsBytes2, true>`
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0587]: type has conflicting packed and align representation hints
  --> tests/ui-nightly/struct.rs:67:1
   |
67 | struct Unaligned3;
   | ^^^^^^^^^^^^^^^^^
